LPS-43625 Do the translation in LayoutTemplateImpl

--- a/portlets/marketplace-portlet/docroot/app_manager/plugins.jspf
+++ b/portlets/marketplace-portlet/docroot/app_manager/plugins.jspf
@@ -41,7 +41,7 @@
 
 				<tr>
 					<td>
-						<%= LanguageUtil.get(pageContext, layoutTemplate.getName()) %>
+						<%= layoutTemplate.getName(locale) %>
 					</td>
 					<td>
 						<liferay-ui:message key="layout-template" />
