SOS-2115 Source formatting

--- a/themes/so-theme/docroot/_diffs/css/so_core.css
+++ b/themes/so-theme/docroot/_diffs/css/so_core.css
@@ -845,7 +845,7 @@ html.aui {
 	}
 }
 
-/* ---------- Portlet: Calendar ---------- */
+/* ---------- Portlet: calendar ---------- */
 
 .calendar-portlet {
 	.nav-tabs {
